fixing var names and making progress

--- a/index-START.html
+++ b/index-START.html
@@ -37,22 +37,38 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-    let filterResult = inventors.filter(invertor => invertor['year'] == 1815)
-    console.log(filterResult)
+    // --------------------------------------|| Filter ||-------------------------------------------------------
+    // let filterResult = inventors.filter(function(invertor) {
+    //   if (invertor['year'] >= 1500 && invertor['year'] <= 1600) {
+    //     return true
+    //   }
+    // })
+    // console.table(filterResult)
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
-    let mapResult = inventors.map(invertor => invertor.first + " " + invertor.last)
-    console.log(mapResult)
+    // --------------------------------------|| Map ||-------------------------------------------------------
+
+    // let mapResult = inventors.map(invertor => invertor.first + " " + invertor.last)
+    // console.log(mapResult)
     // Array.prototype.sort()
+
+    // --------------------------------------|| Sort ||-------------------------------------------------------
     // 3. Sort the inventors by birthdate, oldest to youngest
-    let sortResult =  inventors.sort((a,b) => (a.year > b.year) ? 1 : ((b.year > a.year) ? -1 : 0));
-    console.log(sortResult)
+    // let sortResult =  inventors.sort((a,b) => (a.year > b.year) ? 1 : ((b.year > a.year) ? -1 : 0));
+    // console.log(sortResult)
+
+
+    // --------------------------------------|| Reduce ||-------------------------------------------------------
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    let Age = inventors.map(inventor => inventor.passed - inventor.year )
+    console.log("The inventors live " + Age.reduce((previousValue, currentValue) => previousValue + currentValue) + " all together")
 
     // 5. Sort the inventors by years lived
-
+    // --------------------------------------|| Sort by years lived ||-------------------------------------------------------
+    let sortAgeResult =  Age.sort((a,b) => (a.Age > b.Age) ? 1 : ((b.Age > a.Age) ? -1 : 0));
+    console.log(sortAgeResult);
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
